@@ -1,3 +1,8 @@
+Fri Sep 23 09:25:04 UTC 2011  Marcel Smit  <msmit@remedy.nl>
+
+        * bin/PerlACE/TestTarget_Android.pm:
+          Stop the script when an emulator times out.
+
 Wed Sep 14 07:54:28 UTC 2011  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * bin/PerlACE/TestTarget_Android.pm:
